Adjusted formatting of functions_overview.md file

--- a/wizards_staff_example.ipynb
+++ b/wizards_staff_example.ipynb
@@ -16,6 +16,7 @@
    "source": [
     "import wizards_staff # import the module\n",
     "\n",
+    "# Path to the example data folder (update this path to your own data directory)\n",
     "results_folder = './path/to/results' # Folder containing the results of the Lizard_Wizard pipeline\n",
     "metadata_path = './path/to/metadata.csv' # Path to the metadata file\n",
     "frate = 30  # Written in Frames Per Second\n",
