--- a/wizards_staff_example.ipynb
+++ b/wizards_staff_example.ipynb
@@ -22,14 +22,15 @@
     "frate = 30  # Written in Frames Per Second\n",
     "\n",
     "# Run the full analysis pipeline:\n",
-    "rise_time_df, fwhm_df, frpm_df, mask_metrics_df, silhouette_scores_df = wizards_staff.run_all(results_folder,  # Folder containing the results of the Lizard_Wizard pipeline\n",
-    "                                                                                            metadata_path, # Path to the metadata file\n",
-    "                                                                                            frate=frate, # Frame rate of the video\n",
-    "                                                                                            size_threshold=20000, # Parameter to filter out large noise \n",
-    "                                                                                            show_plots = True, # Set to True to show the plots inline\n",
-    "                                                                                            save_files = False, # Set to True to save the output files\n",
-    "                                                                                            output_dir='./lizard_wizard_outputs' # Directory to save the output files\n",
-    "                                                                                            )"
+    "rise_time_df, fwhm_df, frpm_df, mask_metrics_df, silhouette_scores_df = wizards_staff.run_all(\n",
+    "    results_folder,  # Folder containing the results of the Lizard_Wizard pipeline\n",
+    "    metadata_path, # Path to the metadata file\n",
+    "    frate=frate, # Frame rate of the video\n",
+    "    size_threshold=20000, # Parameter to filter out large noise \n",
+    "    show_plots = True, # Set to True to show the plots inline\n",
+    "    save_files = False, # Set to True to save the output files\n",
+    "    output_dir='./lizard_wizard_outputs' # Directory to save the output files\n",
+    ")"
    ]
   },
   {
