--- a/wizards_staff_example.ipynb
+++ b/wizards_staff_example.ipynb
@@ -16,13 +16,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-09-25 09:36:10.359995: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-09-25 09:36:10.373024: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-09-25 09:36:10.388314: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-09-25 09:36:10.392698: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-09-25 09:36:10.404887: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-09-25 13:22:30.001994: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-09-25 13:22:30.015026: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-09-25 13:22:30.030342: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-09-25 13:22:30.034764: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-09-25 13:22:30.046940: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 AVX512F AVX512_VNNI AVX512_BF16 AVX512_FP16 AVX_VNNI AMX_TILE AMX_INT8 AMX_BF16 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-09-25 09:36:11.632267: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+      "2024-09-25 13:22:31.306483: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
      ]
     }
    ],
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -631,21 +631,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/nickyoungblut/miniforge3/envs/wizards-staff/lib/python3.11/site-packages/caiman/source_extraction/cnmf/deconvolution.py:1047: RuntimeWarning: divide by zero encountered in log\n",
-      "  'logmexp': lambda Pxx_ind: np.sqrt(np.exp(np.mean(np.log(Pxx_ind / 2))))\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa221718ed8f46498864ab7eb8555571",
+       "model_id": "6bf863f86106489d9c3d1833fc178318",
        "version_major": 2,
        "version_minor": 0
       },
@@ -660,6 +652,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/nickyoungblut/miniforge3/envs/wizards-staff/lib/python3.11/site-packages/caiman/source_extraction/cnmf/deconvolution.py:1047: RuntimeWarning: divide by zero encountered in log\n",
+      "  'logmexp': lambda Pxx_ind: np.sqrt(np.exp(np.mean(np.log(Pxx_ind / 2))))\n",
       "/home/nickyoungblut/miniforge3/envs/wizards-staff/lib/python3.11/site-packages/caiman/source_extraction/cnmf/deconvolution.py:1047: RuntimeWarning: divide by zero encountered in log\n",
       "  'logmexp': lambda Pxx_ind: np.sqrt(np.exp(np.mean(np.log(Pxx_ind / 2))))\n"
      ]
@@ -810,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -944,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1046,9 +1040,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saving data items to: tmp/output\n",
+      "  'rise_time_data' saved to: tmp/output/rise-time-data.csv\n",
+      "  'fwhm_data' saved to: tmp/output/fwhm-data.csv\n",
+      "  'frpm_data' saved to: tmp/output/frpm-data.csv\n",
+      "  'mask_metrics_data' saved to: tmp/output/mask-metrics-data.csv\n",
+      "  'silhouette_scores_data' saved to: tmp/output/silhouette-scores-data.csv\n",
+      "  'df_mn_pwc' saved to: tmp/output/df-mn-pwc.csv\n",
+      "  'df_mn_pwc_intra' saved to: tmp/output/df-mn-pwc-intra.csv\n",
+      "  'df_mn_pwc_inter' saved to: tmp/output/df-mn-pwc-inter.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# save results\n",
     "orb.save_results(output_dir)"
@@ -1056,9 +1066,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Saving data items to: tmp/output\n",
+      "  'rise_time_data' saved to: tmp/output/rise-time-data.csv\n",
+      "  'df_mn_pwc' saved to: tmp/output/df-mn-pwc.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# save specific results\n",
     "orb.save_results(output_dir, result_names=[\"rise_time_data\", \"df_mn_pwc\"])"
@@ -1073,9 +1093,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "absl-py==2.1.0\n",
+      "asciitree==0.3.3\n",
+      "asttokens==2.4.1\n",
+      "astunparse==1.6.3\n",
+      "attrs==24.2.0\n",
+      "bleach==6.1.0\n",
+      "bokeh==3.5.2\n",
+      "caiman @ git+https://github.com/flatironinstitute/CaImAn.git@bb55800806f0898592d79dcc705a0b53ccd01ec3\n",
+      "certifi==2024.8.30\n",
+      "charset-normalizer==3.3.2\n",
+      "colorcet==3.1.0\n",
+      "comm==0.2.2\n",
+      "contourpy==1.3.0\n",
+      "cycler==0.12.1\n",
+      "debugpy==1.8.5\n",
+      "decorator==5.1.1\n",
+      "entrypoints==0.4\n",
+      "executing==2.1.0\n",
+      "fasteners==0.19\n",
+      "flatbuffers==24.3.25\n",
+      "fonttools==4.53.1\n",
+      "gast==0.6.0\n",
+      "google-pasta==0.2.0\n",
+      "greenlet==3.1.1\n",
+      "grpcio==1.66.1\n",
+      "h5py==3.11.0\n",
+      "hdmf==3.14.4\n",
+      "holoviews==1.19.1\n",
+      "idna==3.10\n",
+      "imageio==2.35.1\n",
+      "ipykernel==6.29.5\n",
+      "ipyparallel==8.8.0\n",
+      "ipython==8.27.0\n",
+      "ipywidgets==8.1.5\n",
+      "jedi==0.19.1\n",
+      "Jinja2==3.1.4\n",
+      "joblib==1.4.2\n",
+      "jsonschema==4.23.0\n",
+      "jsonschema-specifications==2023.12.1\n",
+      "jupyter_client==8.6.3\n",
+      "jupyter_core==5.7.2\n",
+      "jupyterlab_widgets==3.0.13\n",
+      "keras==3.5.0\n",
+      "kiwisolver==1.4.7\n",
+      "lazy_loader==0.4\n",
+      "libclang==18.1.1\n",
+      "linkify-it-py==2.0.3\n",
+      "Markdown==3.7\n",
+      "markdown-it-py==3.0.0\n",
+      "MarkupSafe==2.1.5\n",
+      "matplotlib==3.9.2\n",
+      "matplotlib-inline==0.1.7\n",
+      "mdit-py-plugins==0.4.2\n",
+      "mdurl==0.1.2\n",
+      "ml-dtypes==0.4.1\n",
+      "namex==0.0.8\n",
+      "nest-asyncio==1.6.0\n",
+      "networkx==3.3\n",
+      "numcodecs==0.13.0\n",
+      "numpy==1.26.4\n",
+      "opencv-python==4.10.0.84\n",
+      "opt-einsum==3.3.0\n",
+      "optree==0.12.1\n",
+      "packaging==24.1\n",
+      "pandas==2.2.2\n",
+      "panel==1.5.0\n",
+      "param==2.1.1\n",
+      "parso==0.8.4\n",
+      "PeakUtils==1.3.5\n",
+      "pexpect==4.9.0\n",
+      "pillow==10.4.0\n",
+      "PIMS==0.7\n",
+      "platformdirs==4.3.6\n",
+      "prompt_toolkit==3.0.47\n",
+      "protobuf==4.25.4\n",
+      "psutil==6.0.0\n",
+      "psycopg2-binary==2.9.9\n",
+      "ptyprocess==0.7.0\n",
+      "pure_eval==0.2.3\n",
+      "Pygments==2.18.0\n",
+      "pynwb==2.8.2\n",
+      "pyparsing==3.1.4\n",
+      "PyPika==0.48.9\n",
+      "python-dateutil==2.9.0.post0\n",
+      "python-dotenv==1.0.1\n",
+      "pytz==2024.2\n",
+      "pyviz_comms==3.0.3\n",
+      "PyYAML==6.0.2\n",
+      "pyzmq==26.2.0\n",
+      "referencing==0.35.1\n",
+      "requests==2.32.3\n",
+      "rich==13.8.1\n",
+      "rpds-py==0.20.0\n",
+      "ruamel.yaml==0.18.6\n",
+      "ruamel.yaml.clib==0.2.8\n",
+      "scikit-image==0.24.0\n",
+      "scikit-learn==1.5.2\n",
+      "scipy==1.14.1\n",
+      "six==1.16.0\n",
+      "slicerator==1.1.0\n",
+      "SQLAlchemy==2.0.35\n",
+      "stack-data==0.6.3\n",
+      "tensorboard==2.17.1\n",
+      "tensorboard-data-server==0.7.2\n",
+      "tensorflow==2.17.0\n",
+      "tensorflow-io-gcs-filesystem==0.37.1\n",
+      "termcolor==2.4.0\n",
+      "threadpoolctl==3.5.0\n",
+      "tifffile==2024.8.30\n",
+      "tornado==6.4.1\n",
+      "tqdm==4.66.5\n",
+      "traitlets==5.14.3\n",
+      "typing_extensions==4.12.2\n",
+      "tzdata==2024.1\n",
+      "uc-micro-py==1.0.3\n",
+      "urllib3==2.2.3\n",
+      "wcwidth==0.2.13\n",
+      "webencodings==0.5.1\n",
+      "Werkzeug==3.0.4\n",
+      "widgetsnbextension==4.0.13\n",
+      "-e git+ssh://git@github.com/nick-youngblut/Wizards-Staff.git@49cb88272525993de380bf149e3810a0ca6d22eb#egg=wizards_staff\n",
+      "wrapt==1.16.0\n",
+      "xyzservices==2024.9.0\n",
+      "zarr==2.18.3\n"
+     ]
+    }
+   ],
    "source": [
     "!pip freeze"
    ]
