refactor(metadata): Update column name handling for consistency
- Change 'Filename' to 'Sample' in metadata processing to match source files
- Add column renaming in append_metadata_to_dfs for backward compatibility
- Preserve existing functionality while accommodating new column naming

notebook: Update processing parameters and add debugging cell

- Disable inline plot display for batch processing
- Update output directory path with '_rerun' suffix
- Add cell to inspect metadata file contents for debugging

--- a/wizards_staff_example.ipynb
+++ b/wizards_staff_example.ipynb
@@ -26,10 +26,20 @@
     "                                                                                            metadata_path, # Path to the metadata file\n",
     "                                                                                            frate=frate, # Frame rate of the video\n",
     "                                                                                            size_threshold=20000, # Parameter to filter out large noise \n",
-    "                                                                                            show_plots = True, # Set to True to show the plots inline\n",
+    "                                                                                            show_plots = False, # Set to True to show the plots inline\n",
     "                                                                                            save_files = True, # Set to True to save the output files\n",
-    "                                                                                            output_dir='/large_storage/multiomics/public/CMTC_Sph06172024_outputs/' # Directory to save the output files\n",
+    "                                                                                            output_dir='/large_storage/multiomics/public/CMTC_Sph06172024_outputs_rerun/' # Directory to save the output files\n",
     "                                                                                            )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "pd.read_csv(metadata_path)"
    ]
   },
   {
